bug: fix modal style on mobile

--- a/src/components/modal/styles.scss
+++ b/src/components/modal/styles.scss
@@ -26,7 +26,8 @@
   }
 
   .modal-content {
-    background: white;
+    background: #fff;
+    background-clip: padding-box;
     overflow: auto;
     outline: none;
     border-radius: 4px;
@@ -38,6 +39,10 @@
     margin: auto;
     transition: all 300ms ease-in-out;
     transform: translateY(-200%);
+
+    @include onMobile {
+      align-items: flex-start;
+    }
 
     &.start {
       align-items: start;
